// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Grid Snapshots Grid with at least 2 columns with 1fr w/out className 1`] = `
<div>
  <div
    class="brz-ed-control__grid"
    style="grid-template-columns: 1fr 1fr;"
  >
    <div
      class="brz-ed-control__grid__column brz-ed-control__grid__column--align-start"
    >
      Column with text align start
    </div>
    <div
      class="brz-ed-control__grid__column brz-ed-control__grid__column--align-start"
    >
      Column with text align start
    </div>
  </div>
</div>
`;

exports[`Test Grid Snapshots Grid with at least 2 columns with 1fr with className 1`] = `
<div>
  <div
    class="brz-ed-control__grid test-classname"
    style="grid-template-columns: 1fr 1fr;"
  >
    <div
      class="brz-ed-control__grid__column brz-ed-control__grid__column--align-start"
    >
      Column with text align start
    </div>
    <div
      class="brz-ed-control__grid__column brz-ed-control__grid__column--align-start"
    >
      Column with text align start
    </div>
  </div>
</div>
`;

exports[`Test Grid Snapshots Grid with at least 2 columns with 1fr with separator 1`] = `
<div>
  <div
    class="brz-ed-control__grid brz-ed-control__grid--separator"
    style="grid-template-columns: 1fr 1fr;"
  >
    <div
      class="brz-ed-control__grid__column brz-ed-control__grid__column--align-start"
    >
      Column with text align start
    </div>
    <div
      class="brz-ed-control__grid__column brz-ed-control__grid__column--align-start"
    >
      Column with text align start
    </div>
  </div>
</div>
`;

exports[`Test Grid Snapshots Grid with at least 2 columns with align center with 1fr w/out separator 1`] = `
<div>
  <div
    class="brz-ed-control__grid"
    style="grid-template-columns: 1fr 1fr;"
  >
    <div
      class="brz-ed-control__grid__column brz-ed-control__grid__column--align-center"
    >
      Column with text align center
    </div>
    <div
      class="brz-ed-control__grid__column brz-ed-control__grid__column--align-center"
    >
      Column with text align center
    </div>
  </div>
</div>
`;

exports[`Test Grid Snapshots Grid with at least 2 columns with align end with 1fr w/out separator 1`] = `
<div>
  <div
    class="brz-ed-control__grid"
    style="grid-template-columns: 1fr 1fr;"
  >
    <div
      class="brz-ed-control__grid__column brz-ed-control__grid__column--align-end"
    >
      Column with text align end
    </div>
    <div
      class="brz-ed-control__grid__column brz-ed-control__grid__column--align-end"
    >
      Column with text align end
    </div>
  </div>
</div>
`;

exports[`Test Grid Snapshots Grid with at least 2 columns with align end with 1fr w/out separator with custom button component 1`] = `
<div>
  <div
    class="brz-ed-control__grid"
    style="grid-template-columns: 1fr 1fr;"
  >
    <div
      class="brz-ed-control__grid__column brz-ed-control__grid__column--align-end"
    >
      Column with text align end
    </div>
    <div
      class="brz-ed-control__grid__column brz-ed-control__grid__column--align-end"
    >
      <div
        class="brz-ed-control__button brz-ed-control__button-right"
      >
        <span
          class="brz-ed-control__label"
        >
          Text
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Grid Snapshots Grid with at least 2 columns:first one 'auto', second one 1fr w/out separator 1`] = `
<div>
  <div
    class="brz-ed-control__grid"
    style="grid-template-columns: auto 1fr;"
  >
    <div
      class="brz-ed-control__grid__column brz-ed-control__grid__column--align-start"
    >
      Column with text align start
    </div>
    <div
      class="brz-ed-control__grid__column brz-ed-control__grid__column--align-start"
    >
      Column with text align start
    </div>
  </div>
</div>
`;
